# swgoh-tb

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  swgoh-tb.js
assets/: icon.html  manifest.json  sw.js
assets/data/: INFO.md  Phase1.toml  Phase2.toml  Phase3.toml  Phase4.toml  Phase5.toml  Phase6.toml  Units.toml
src/: app.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/teams/: mission.rs  mod.rs  omicron.rs  phase.rs  planet.rs  video.rs
src/api/units/: mod.rs  unit.rs
tools/: README.md
tools/asset-getter/: Cargo.toml  README.md
tools/asset-getter/src/: crawler.rs  lib.rs  main.rs
tools/icon-generator/: Cargo.toml  README.md
tools/icon-generator/src/: favicon.rs  help.rs  lib.rs  main.rs  missing.rs  placeholder.rs  unavailable.rs
